--- a/Site1.Master
+++ b/Site1.Master
@@ -22,7 +22,7 @@
 	        </button>
         </div>
 				<div class="p-4">
-		  		<h1><a href="index.html" class="logo">BMIIT <span>Student Portal</span></a></h1>
+		  		<h1><a href="home.aspx" class="logo">BMIIT <span>Student Portal</span></a></h1>
 	        <ul class="list-unstyled components mb-5">
 	          <li class="active">
 	           
